[gd_scene load_steps=6 format=3 uid="uid://cl3gneduvqjdn"]

[ext_resource type="Script" path="res://Scripts/colony.gd" id="1_7606h"]
[ext_resource type="PackedScene" uid="uid://bshn0kdmpqbnj" path="res://Scenes/bacterium.tscn" id="2_fxxkw"]
[ext_resource type="Script" path="res://Scripts/ColonyTimer.gd" id="3_pkowl"]
[ext_resource type="Texture2D" uid="uid://dhuvgmi3gk51t" path="res://Sprites/BacteriumPlaceholderOpen.png" id="4_w31ri"]

[sub_resource type="CircleShape2D" id="CircleShape2D_c51ot"]
radius = 34.2345

[node name="colony" type="Area2D"]
position = Vector2(609, 726)
script = ExtResource("1_7606h")
bacteriumScene = ExtResource("2_fxxkw")
metadata/_edit_group_ = true

[node name="ColonyTimer" type="Timer" parent="."]
autostart = true
script = ExtResource("3_pkowl")

[node name="ColonySprite" type="Sprite2D" parent="."]
texture = ExtResource("4_w31ri")

[node name="ColonyCollider" type="CollisionShape2D" parent="."]
position = Vector2(9, 7)
shape = SubResource("CircleShape2D_c51ot")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="ColonyTimer" to="." method="_on_colony_timer_timeout"]
